fixed Logo left margin on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4413,6 +4413,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   font-size: 18px;
   line-height: 20px;
   height: 50px;
+  margin-left: 15px;
 }
 .navbar-brand:hover,
 .navbar-brand:focus {
